Second Commit: The remaining part of the project